make reminder normal text

--- a/about-swamp.qmd
+++ b/about-swamp.qmd
@@ -16,7 +16,7 @@ Statewide SWAMP Monitoring Programs include:
 -   [Toxicology and Contaminants Program](https://www.waterboards.ca.gov/water_issues/programs/swamp/spot/)
 
 ::: callout-note
-*Reminder to add icons and new links when ready*
+Reminder to add icons and new links when ready
 :::
 
 In addition to providing information and tools, SWAMP's vision is to help enhance monitoring, assessment and reporting activities throughout the Water Boards.
