--- a/onboarding.qmd
+++ b/onboarding.qmd
@@ -2,6 +2,8 @@
 
 Here is a non-comprehensive, but hopefully informative guide to onboarding to the SWAMP Unit. The majority of this information in this section is aimed towards starting at SWAMP as a rank-and-file (non-supervisory) state employee. Please re-reference this page throughout your time at SWAMP!
 
+Also see the [New Employee Orientation Resources](https://waternet.waterboards.ca.gov/das/benefits/emp_orientation.shtml) & make a note of [state holidays](https://www.calhr.ca.gov/employees/pages/state-holidays.aspx) on your calendar.
+
 ## HR forms
 
 On your starting day, you will receive a package of forms and documents from the HR department including:
@@ -68,6 +70,58 @@ To learn more about the health coverage available to you, please visit the CalPE
 
 ## Timesheets & Pay
 
-## Office- and Remote-centered work
+Staff should complete and submit their timesheets by the 25th of each month.
+
+It typically takes \~1 month for new staff to be entered in the electronic timesheet system (BizFlow), so the first timesheet is done by filling out an excel template.
+
+### BizFlow eTimesheets
+
+[Instructions on how to use BizFlow](https://waternet.waterboards.ca.gov/das/human_resources/docs/BizFlow_Gen_Instructions_15Jul2022.pdf) (Water Board intranet site requires VPN login).
+
+-   The menu provides several options -- go to eTimesheet tab, then eTimesheet Process, then click on Current eTimesheet to begin
+
+[BizFlow Login](https://ework.waterboards.ca.gov/bizflow/index.jsp?v=_5FtHCSz6JfUxrK7)
+
+-   To login you must use MS Edge browser and be connected to VPN (or on the network at CalEPA building)
+-   Use your workstation username (waterboards email address) and password to login
+
+BizFlow Tips
+
+-   [Check out the FAQs](https://waternet.waterboards.ca.gov/das/human_resources/docs/BizFlow_FAQs.pdf)
+-   Your supervisor will provide the Task ID, which will be saved on all future timesheets
+-   Work hours go on page 1, days off go on page 2
+-   Most leave types can't be used the first month, except Professional Development Days
+-   Don't forget to change the status to "Submit to Supervisor" in upper left corner before clicking green check box to complete the process
+
+### Electronic Paystubs
+
+Direct deposit should show up the last day of the pay period (end of the month)
+
+You can view and download your paystubs from the [Cal Employee Connect portal](https://connect.sco.ca.gov/)
+
+-   Your supervisor will request login information for you from HR (personnel specialist) after your first paycheck
+
+Leave balances are included on your paystubs and can be tracked in Cal Employee Connect, but they are always a month (or more) behind. You may want to track them in real-time in your own spreadsheet.
+
+## Office-centered and Remote-centered Work
+
+The Telework Policy for CalEPA and the Water Boards allows remote-centered work options for all staff as long as business needs can be met.
+
+As of January 2023, OIMA still maintains enough office space that staff will be assigned a cubicle or personal workstation in the CalEPA building whether or not they primarily work remotely.
+
+### Work Week Agreement and Telework Plan
+
+All staff are required to fill out a work week agreement and telework plan that specifies where you will typically work on a given day of the week (office or remote) and your typical work hours. These plans must be completed even if the employee works in the office full time.
+
+Your typical work schedule (Work Week Agreement) and Telework Plan need to be created in BizFlow within 2 months of starting work.
+
+In BizFlow, select Employee Self-Service from the menu, then click on Work Week Agreement/Telework Request to complete this process.
 
 ## Equipment
+
+-   The Water Boards only uses PCs and does not generally support any Mac-based hardware.
+-   All staff are assigned a laptop (typically Dell or HP) that they can use at home and the office.
+-   The office workstation is set up with two wide screen monitors, keyboard, mouse and docking station where you plug in your laptop.
+-   Equipment available to take home includes: laptop, laptop bag, standard monitor, keyboard, mouse, headset, adjustable monitor stand, adjustable tilting laptop stand.
+-   To request additional equipment or to report issues with any of your equipment, send an email to the [IT Help Desk](mailto:help@waterboards.ca.gov). This will log a ticket in their tracking system and they will respond typically the same day.
+-   Ergonomic equipment may be made available through a [Reasonable Accommodation Request](https://waternet.waterboards.ca.gov/eeo/reasonable/index.shtml) (intranet link requires VPN login). Work with your supervisor for guidance on preparing the request.
