--- a/contacts.qmd
+++ b/contacts.qmd
@@ -64,6 +64,8 @@ The SWAMP Team is composed of multiple team members at the State Water Board wit
 | Kimberly Pham             | Environmental Scientist                               | Chemistry Data Manager                                  |
 +---------------------------+-------------------------------------------------------+---------------------------------------------------------+
 | Lindsey Metz              | Environmental Scientist                               | Microbiology Data Manager                               |
+|                           |                                                       |                                                         |
+|                           |                                                       | Data science, data visualization and programming (R)    |
 +---------------------------+-------------------------------------------------------+---------------------------------------------------------+
 | Tony Gill                 | Environmental Scientist                               | Toxicity Data Manager                                   |
 |                           |                                                       |                                                         |
@@ -94,24 +96,24 @@ The SWAMP Team is composed of multiple team members at the State Water Board wit
 
 ## Former Fellows & Interns
 
-+---------------------+-----------------------------+-------------+-------------------------+
-| Name                | Title                       | Year        | Primary Project Area(s) |
-+=====================+=============================+=============+=========================+
-| Lindsey Metz\*      | California Sea Grant Fellow | 2022        |                         |
-+---------------------+-----------------------------+-------------+-------------------------+
-| Gabriella Moran     | CivicSpark Fellow           | 2022        | Tribal Data Initiatives |
-+---------------------+-----------------------------+-------------+-------------------------+
-| Brook Thompson      | Stanford Fellow             | 2021        | Tribal Data Initiatives |
-+---------------------+-----------------------------+-------------+-------------------------+
-| Corey Clatterbuck\* | California Sea Grant Fellow | 2021        |                         |
-+---------------------+-----------------------------+-------------+-------------------------+
-| Ross Cooper         | California Sea Grant Fellow | 2020        |                         |
-+---------------------+-----------------------------+-------------+-------------------------+
-| Maraid Jimenez      | CivicSpark Fellow           | 2020        | Tribal Data Initiatives |
-+---------------------+-----------------------------+-------------+-------------------------+
-| Anna Holder\*       | California Sea Grant Fellow | 2019        |                         |
-+---------------------+-----------------------------+-------------+-------------------------+
-| Nicole Hack         | California Sea Grant Fellow | 2018        |                         |
-+---------------------+-----------------------------+-------------+-------------------------+
++---------------------+-----------------------------+--------------+-------------------------+
+| Name                | Title                       | Year         | Primary Project Area(s) |
++=====================+=============================+==============+=========================+
+| Lindsey Metz\*      | California Sea Grant Fellow | 2022         |                         |
++---------------------+-----------------------------+--------------+-------------------------+
+| Gabriella Moran     | CivicSpark Fellow           | 2022         | Tribal Data Initiatives |
++---------------------+-----------------------------+--------------+-------------------------+
+| Brook Thompson      | Stanford Fellow             | 2021         | Tribal Data Initiatives |
++---------------------+-----------------------------+--------------+-------------------------+
+| Corey Clatterbuck\* | California Sea Grant Fellow | 2021         |                         |
++---------------------+-----------------------------+--------------+-------------------------+
+| Ross Cooper         | California Sea Grant Fellow | 2020         |                         |
++---------------------+-----------------------------+--------------+-------------------------+
+| Maraid Jimenez      | CivicSpark Fellow           | 2020         | Tribal Data Initiatives |
++---------------------+-----------------------------+--------------+-------------------------+
+| Anna Holder\*       | California Sea Grant Fellow | 2019         |                         |
++---------------------+-----------------------------+--------------+-------------------------+
+| Nicole Hack         | California Sea Grant Fellow | 2018         |                         |
++---------------------+-----------------------------+--------------+-------------------------+
 
 : \*Fellows who have been hired on at the Water Boards
