Add content from SharePoint doc

--- a/procurement.qmd
+++ b/procurement.qmd
@@ -2,6 +2,8 @@
 
 How do we get the items we need?
 
+Frequency of procurement process? (I.e. we all need to plan/think WAY ahead!)
+
 ## Technical
 
 ## Office supplies
