Add content from SharePoint Doc

--- a/offboarding.qmd
+++ b/offboarding.qmd
@@ -11,3 +11,9 @@ You're moving on and up -- here's what you need to know & do before we wish you 
 ## Timesheets & Pay
 
 ## Equipment
+
+Returning tech (laptops, etc.)
+
+Returning supplies
+
+Returning ID Badges
