Add note about 30 day airline reservation policy

--- a/travel.qmd
+++ b/travel.qmd
@@ -34,18 +34,20 @@ Phone: (916) 341-5036
 2.  Know your [reimbursement rates](https://www.calhr.ca.gov/employees/Pages/travel-reimbursements.aspx)! State employees may be eligible to receive reimbursement for expenses such as:
 
     -   Method of travel (transportation)
-
     -   Meals and incidentals
-
     -   Short-term lodging
-
     -   Out-of-state travel
-
     -   Out-of-country travel
-
     -   Personal vehicle mileage 
-
     -   Other actual and necessary business and/or travel costs incurred while conducting official state business
+
+3.  Airline reservations should be made **no more than 30 days** prior to the expected travel dates.
+
+    -   Department of General Services (DGS) recommends booking flights **between 21 to 30 days** prior to travel.
+
+    -   **Frequent travelers should book non-refundable fares** since there is a high probability that the unused funds will be used for future travel within the expiration period.
+
+    -   **Non-frequent travelers should book non-refundable fares** if the trips dates are fixed and there is a low probability of a change in plans.
 
 ## Contacts
 
